--- a/Three_months_index.html
+++ b/Three_months_index.html
@@ -1,1 +1,86 @@
 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<head lang="en">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Bootstrap template page</title>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/ntudigital/NOW/digital_induction.min.css" crossorigin="anonymous">
+</head>
+<body>
+<div class="container">
+<h1>Within your first three months</h1>
+<div id="body">
+<div class="btn-group float-right" role="group" aria-label="Activity navigation"><a role="button" href="#" target="_blank" title="Go to previous activity" rel="noopener noreferrer"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-arrow-left fa-stack-1x"></i></span></a> <a role="button" href="/d2l/le/content/130812/viewContent/2860312/View" target="_blank" title="Go to activity checklist" rel="noopener noreferrer"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-check fa-stack-1x"></i></span></a> <a role="button" href="#" target="_parent" title="Go to next activity"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-arrow-right fa-stack-1x"></i></span></a></div>
+<h2>Overview</h2>
+<p class="lead">Within your first three months, you will have used a number of NTU's systems and software to complete tasks or help solve problems.&nbsp; The following activities will introduce you to some broader topics that will help you develop your wider digital practices.&nbsp; To participate in an activity, select a title from the list below.</p>
+<table class="table table-hover">
+<thead class="thead-light">
+<tr>
+<th scope="col">Activity</th>
+<th scope="col">Method</th>
+<th scope="col">Duration</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="/d2l/le/content/130812/viewContent/2860293/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Working flexibly</a></td>
+<td>Self-directed</td>
+<td>5 minutes</td>
+</tr>
+<tr>
+<td><a href="/d2l/le/content/130812/viewContent/2860392/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Using Lynda.com</a></td>
+<td>Self-directed</td>
+<td>5 minutes</td>
+</tr>
+<tr>
+<td><a href="/d2l/le/content/130812/viewContent/2860422/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Managing Your Outlook Inbox</a></td>
+<td>Self-directed</td>
+<td>5 minutes</td>
+</tr>
+<tr>
+<td><a href="/d2l/le/content/130812/viewContent/2860401/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Copyright/Creative Commons</a></td>
+<td>Self-directed</td>
+<td>5 minutes</td>
+</tr>
+<tr>
+<td><a href="/d2l/le/content/130812/viewContent/2860407/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Accessibility Awareness</a></td>
+<td>Self-directed</td>
+<td>5 minutes</td>
+</tr>
+<tr>
+<td><a href="/d2l/le/content/130812/viewContent/2860416/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Tools to extend your development</a></td>
+<td>Self-directed</td>
+<td>5 minutes</td>
+</tr>
+<tr>
+<td><a href="/d2l/le/content/130812/viewContent/2883008/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Appraisee online training</a></td>
+<td>Self-directed</td>
+<td>30-40 minutes</td>
+</tr>
+<tr>
+<td><i class="far fa-comments fa-fw fa-2x" aria-hidden="true"></i> Third month review</td>
+<td>Meeting organised by your line manager</td>
+<td>30 minutes</td>
+</tr>
+</tbody>
+</table>
+<p><a href="https://www.lynda.com/Business-Software-tutorials/Make-most-meetings/440668/489456-4.html" target="_blank" rel="noopener noreferrer"><i class="fas fa-play-circle fa-fw"></i>Watch this short video on Lynda.com (requires your NTU login) to help you make the most of your review discussions</a></p>
+<div class="row">
+<div class="col-12 col-sm-4"><a class="btn btn-lg btn-block btn-light" role="button" href="#" target="_parent" title="Go to previous activity"><span class="fa-stack fa-2x"><i class="fas fa-circle fa-stack-2x" style="color: #ed1266;"></i><i class="fas fa-arrow-left fa-stack-1x fa-inverse"></i></span> Previous </a></div>
+<div class="col-12 col-sm-4"><a class="btn btn-lg btn-block btn-light" role="button" href="/d2l/le/content/130812/viewContent/2860312/View" target="_blank" title="Go to activity checklist" rel="noopener noreferrer"><span class="fa-stack fa-2x"><i class="fas fa-circle fa-stack-2x" style="color: #ed1266;"></i><i class="fas fa-check fa-stack-1x fa-inverse"></i></span> Sign off</a></div>
+<div class="col-12 col-sm-4"><a class="btn btn-lg btn-block btn-light" role="button" href="#" target="_parent" title="Go to next activity"><span class="fa-stack fa-2x"><i class="fas fa-circle fa-stack-2x" style="color: #ed1266;"></i><i class="fas fa-arrow-right fa-stack-1x fa-inverse"></i></span> Next</a></div>
+<div class="col-12 col-sm-3"><a class="btn btn-lg btn-block btn-light" role="button" href="/d2l/le/content/130812/viewContent/2549398/View" target="_parent" title="Go to the Digital Induction homepage"><span class="fa-stack fa-x"><i class="fas fa-circle fa-stack-2x" style="color: #004877;"></i><i class="fas fa-home fa-stack-1x fa-inverse" data-fa-transform="down-6"></i></span> Homepage</a></div>
+<!--<div class="col-12 col-sm-3"><a class="btn btn-lg btn-block btn-light" role="button" href="/d2l/le/content/130812/viewContent/2558846/View" target="_parent" title="Go to the First Week Overview"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x" style="color: #004877;"></i><i class="far fa-calendar-alt fa-stack-1x fa-inverse"></i></span> Go to First Week</a></div>-->
+<div class="col-12 col-sm-3"><a class="btn btn-lg btn-block btn-light" role="button" href="/d2l/home/295527" target="_blank" title="Go to Office Central" rel="noopener noreferrer"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x" style="color: #004877;"></i><i class="fas fa-question fa-stack-1x fa-inverse"></i></span> Help</a></div>
+<div class="col-12 col-sm-3"><a class="btn btn-lg btn-block btn-light" role="button" href="https://ntusurvey.onlinesurveys.ac.uk/digital-induction-feedback" target="_new" title="Go to our feedback form"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x" style="color: #004877;"></i><i class="far fa-comment fa-stack-1x fa-inverse"></i></span> Feedback</a></div>
+</div>
+<small>&copy; Nottingham Trent University</small>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+</div>
+</div>
+</body>
+</html>
