--- a/First_day_index.html
+++ b/First_day_index.html
@@ -30,58 +30,53 @@
 </div>
 </div>
 <div class="row filterDiv core">
-<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2558866/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i>CR Understanding NTU Systems</a></div>
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2549488/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Setting up your email signature</a></div>
 <div class="col">Self-directed</div>
 <div class="col">5 minutes</div>
 </div>
 <div class="row filterDiv core">
-<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2558866/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i>CR Understanding NTU Systems</a></div>
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2554044/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Finding people/setting up a contact list</a></div>
 <div class="col">Self-directed</div>
 <div class="col">5 minutes</div>
 </div>
-<div class="row filterDiv lta">
-<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2558866/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i>LT Understanding NTU Systems</a></div>
+<div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2554182/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Connecting to a printer</a></div>
 <div class="col">Self-directed</div>
 <div class="col">5 minutes</div>
 </div>
+  <div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2554088/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Using IT support</a></div>
+<div class="col">Self-directed</div>
+<div class="col">5 minutes</div>
 </div>
-<table class="table table-hover">
-<thead class="thead-light">
-<tr>
-<th scope="col">Activity</th>
-<th scope="col">Method</th>
-<th scope="col">Duration</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2549488/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Setting up your email signature</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2554044/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Finding people/setting up a contact list</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2554182/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Connecting to a printer</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2554088/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Using IT support</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><i class="far fa-comments fa-fw fa-2x" aria-hidden="true"></i> First Day review</td>
-<td>Meeting organised by your line manager</td>
-<td>30 minutes</td>
-</tr>
-</tbody>
-</table>
-<p><a href="https://www.lynda.com/Business-Software-tutorials/Make-most-meetings/440668/489456-4.html" target="_blank" rel="noopener noreferrer"><i class="fas fa-play-circle fa-fw"></i>Watch this short video on Lynda.com (requires your NTU login) to help you make the most of your review discussions</a></p>
+  <div class="row filterDiv lta">
+<div class="col-6"><a href=""><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Learning and teaching roles induction coming soon</a></div>
+<div class="col">TBC</div>
+<div class="col">TBC</div>
+</div>
+  <div class="row filterDiv research">
+<div class="col-6"><a href="" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Researcher roles induction coming soon</a></div>
+<div class="col">TBC</div>
+<div class="col">TBC</div>
+</div>
+  <div class="row filterDiv leadership">
+<div class="col-6"><a href="" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Leadership roles induction coming soon</a></div>
+<div class="col">TBC</div>
+<div class="col">TBC</div>
+</div>
+  <div class="row filterDiv profserv">
+<div class="col-6"><a href="" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Professional services roles induction coming soon</a></div>
+<div class="col">TBC</div>
+<div class="col">TBC</div>
+</div>
+   <div class="row filterDiv core lta research leadership profserv">
+<div class="col-6"><i class="far fa-comments fa-fw fa-2x" aria-hidden="true"></i> First Day review</div>
+<div class="col">Meeting organised by your line manager</div>
+<div class="col">30 minutes</div>
+</div>
+</div>
+  
+  <p><a href="https://www.lynda.com/Business-Software-tutorials/Make-most-meetings/440668/489456-4.html" target="_blank" rel="noopener noreferrer"><i class="fas fa-play-circle fa-fw"></i>Watch this short video on Lynda.com (requires your NTU login) to help you make the most of your review discussions</a></p>
 <div class="row">
 <div class="col-12 col-sm-4"><a class="btn btn-lg btn-block btn-light" role="button" href="/d2l/le/content/130812/viewContent/2549398/View" target="_parent" title="Go to previous activity"><span class="fa-stack fa-2x"><i class="fas fa-circle fa-stack-2x" style="color: #ed1266;"></i><i class="fas fa-arrow-left fa-stack-1x fa-inverse"></i></span> Previous </a></div>
 <div class="col-12 col-sm-4"><a class="btn btn-lg btn-block btn-light" role="button" href="/d2l/le/content/130812/viewContent/2557034/View" target="_blank" title="Go to activity checklist" rel="noopener noreferrer"><span class="fa-stack fa-2x"><i class="fas fa-circle fa-stack-2x" style="color: #ed1266;"></i><i class="fas fa-check fa-stack-1x fa-inverse"></i></span> Sign off</a></div>
