--- a/First_week_index.html
+++ b/First_week_index.html
@@ -14,7 +14,67 @@
 <div class="btn-group float-right" role="group" aria-label="Activity navigation"><a role="button" href="/d2l/le/content/130812/viewContent/2549398/View" target="_parent" title="Go to previous activity"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-arrow-left fa-stack-1x"></i></span></a> <a role="button" href="/d2l/le/content/130812/viewContent/2561872/View" target="_blank" title="Go to activity checklist" rel="noopener noreferrer"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-check fa-stack-1x"></i></span></a> <a role="button" href="/d2l/le/content/130812/viewContent/2558866/View" target="_parent" title="Go to next activity"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-arrow-right fa-stack-1x"></i></span></a></div>
 <h2>Overview</h2>
 <p class="lead">In your first week, you may be shown or spoken to about a number of digital tools and systems used at NTU. The following activities will introduce you to some of these tools and systems. To participate in an activity, select a title from the checklist below.</p>
-<table class="table table-hover">
+<div id="myBtnContainer"><button class="btn active" onclick="filterSelection('all')"> See all</button> <button class="btn active" onclick="filterSelection('core')" aria-pressed="true"> Core</button> <button class="btn" onclick="filterSelection('lta')"> Learning and teaching</button> <button class="btn" onclick="filterSelection('research')"> Research</button> <button class="btn d-none" onclick="filterSelection('leadership')" disabled="disabled" role="button" aria-disabled="true" tabindex="-1"> Leadership and management</button> <button class="btn d-none" onclick="filterSelection('profserv')" disabled="disabled" role="button" aria-disabled="true" tabindex="-1"> Professional Services</button> </div>
+
+<div class="container">
+<div class="row filterDiv core lta research leadership profserv">
+<div class="col-6">
+<h5>Activity</h5>
+</div>
+<div class="col">
+<h5>Method</h5>
+</div>
+<div class="col">
+<h5>Duration</h5>
+</div>
+</div>
+<div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2549488/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Setting up your email signature</a></div>
+<div class="col">Self-directed</div>
+<div class="col">5 minutes</div>
+</div>
+<div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2554044/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Finding people/setting up a contact list</a></div>
+<div class="col">Self-directed</div>
+<div class="col">5 minutes</div>
+</div>
+<div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2554182/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Connecting to a printer</a></div>
+<div class="col">Self-directed</div>
+<div class="col">5 minutes</div>
+</div>
+  <div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2554088/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Using IT support</a></div>
+<div class="col">Self-directed</div>
+<div class="col">5 minutes</div>
+</div>
+  <div class="row filterDiv lta">
+<div class="col-6"><a href=""><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Learning and teaching roles induction coming soon</a></div>
+<div class="col">TBC</div>
+<div class="col">TBC</div>
+</div>
+  <div class="row filterDiv research">
+<div class="col-6"><a href="" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Researcher roles induction coming soon</a></div>
+<div class="col">TBC</div>
+<div class="col">TBC</div>
+</div>
+  <div class="row filterDiv leadership">
+<div class="col-6"><a href="" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Leadership roles induction coming soon</a></div>
+<div class="col">TBC</div>
+<div class="col">TBC</div>
+</div>
+  <div class="row filterDiv profserv">
+<div class="col-6"><a href="" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Professional services roles induction coming soon</a></div>
+<div class="col">TBC</div>
+<div class="col">TBC</div>
+</div>
+   <div class="row filterDiv core lta research leadership profserv">
+<div class="col-6"><i class="far fa-comments fa-fw fa-2x" aria-hidden="true"></i> First Day review</div>
+<div class="col">Meeting organised by your line manager</div>
+<div class="col">30 minutes</div>
+</div>
+</div>
+  <table class="table table-hover">
 <thead class="thead-light">
 <tr>
 <th scope="col">Activity</th>
