Update filter list from table
Also hidden leadership and PS holding text with .d-none

--- a/First_month_index.html
+++ b/First_month_index.html
@@ -29,25 +29,60 @@
 </div>
 </div>
 <div class="row filterDiv core">
-<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2549488/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Setting up your email signature</a></div>
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2621870/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Connecting to Wi-Fi and eduroam</a></div>
 <div class="col">Self-directed</div>
 <div class="col">5 minutes</div>
 </div>
 <div class="row filterDiv core">
-<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2554044/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Finding people/setting up a contact list</a></div>
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2621876/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Guidance on social media</a></div>
 <div class="col">Self-directed</div>
 <div class="col">5 minutes</div>
 </div>
 <div class="row filterDiv core">
-<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2554182/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Connecting to a printer</a></div>
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2630245/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Connecting your device to email</a></div>
 <div class="col">Self-directed</div>
 <div class="col">5 minutes</div>
 </div>
   <div class="row filterDiv core">
-<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2554088/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Using IT support</a></div>
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2630252/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Downloading software to your laptop/PC</a></div>
 <div class="col">Self-directed</div>
 <div class="col">5 minutes</div>
 </div>
+      <div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2630252/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Downloading software to your laptop/PC</a></div>
+<div class="col">Self-directed</div>
+<div class="col">5 minutes</div>
+</div>
+    <div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2630747/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Introducing your NTU Smartcard</a></div>
+<div class="col">Self-directed</div>
+<div class="col">5 minutes</div>
+</div>
+  
+    <div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2631103/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Making a room booking</a></div>
+<div class="col">Self-directed</div>
+<div class="col">5 minutes</div>
+</div>
+  
+    <div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2631396/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Windows 10 tips</a></div>
+<div class="col">Self-directed</div>
+<div class="col">5 minutes</div>
+</div>
+  
+    <div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2631405/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Introducing MyNTU</a></div>
+<div class="col">Self-directed</div>
+<div class="col">5 minutes</div>
+</div>
+     <div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2836699/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Understanding Information Security</a></div>
+<div class="col">Self-directed</div>
+<div class="col">5 minutes</div>
+</div>
+
+  
   <div class="row filterDiv lta">
 <div class="col-6"><a href=""><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Learning and teaching roles induction coming soon</a></div>
 <div class="col">TBC</div>
@@ -58,13 +93,13 @@
 <div class="col">TBC</div>
 <div class="col">TBC</div>
 </div>
-  <div class="row filterDiv leadership">
-<div class="col-6"><a href="" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Leadership roles induction coming soon</a></div>
+  <div class="row filterDiv leadership d-none">
+<div class="col-6"><a href="" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> </a></div>
 <div class="col">TBC</div>
 <div class="col">TBC</div>
 </div>
-  <div class="row filterDiv profserv">
-<div class="col-6"><a href="" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Professional services roles induction coming soon</a></div>
+  <div class="row filterDiv profserv d-none">
+<div class="col-6"><a href="" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> </a></div>
 <div class="col">TBC</div>
 <div class="col">TBC</div>
 </div>
@@ -74,67 +109,6 @@
 <div class="col">30 minutes</div>
 </div>
 </div>
-  <table class="table table-hover" style="height: 521px;">
-<thead class="thead-light">
-<tr style="height: 44px;">
-<th scope="col" style="height: 44px;">Activity</th>
-<th scope="col" style="height: 44px;">Method</th>
-<th scope="col" style="height: 44px;">Duration</th>
-</tr>
-</thead>
-<tbody>
-<tr style="height: 53px;">
-<td style="height: 53px;"><a href="/d2l/le/content/130812/viewContent/2621870/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i>Connecting to Wi-Fi and eduroam<br /></a></td>
-<td style="height: 53px;">Self-directed</td>
-<td style="height: 53px;">5 minutes</td>
-</tr>
-<tr style="height: 53px;">
-<td style="height: 53px;"><a href="/d2l/le/content/130812/viewContent/2621876/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i>Guidance on social media</a></td>
-<td style="height: 53px;">Self-directed</td>
-<td style="height: 53px;">5 minutes</td>
-</tr>
-<tr style="height: 53px;">
-<td style="height: 53px;"><a href="/d2l/le/content/130812/viewContent/2630245/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i>Connecting your device to email<br /></a></td>
-<td style="height: 53px;">Self-directed</td>
-<td style="height: 53px;">5 minutes</td>
-</tr>
-<tr style="height: 53px;">
-<td style="height: 53px;"><a href="/d2l/le/content/130812/viewContent/2630252/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i>Downloading software to your laptop/PC<br /></a></td>
-<td style="height: 53px;">Self-directed</td>
-<td style="height: 53px;">5 minutes</td>
-</tr>
-<tr style="height: 53px;">
-<td style="height: 53px;"><a href="/d2l/le/content/130812/viewContent/2630747/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i>Introducing your NTU Smartcard</a></td>
-<td style="height: 53px;">Self-directed</td>
-<td style="height: 53px;">5 minutes</td>
-</tr>
-<tr style="height: 53px;">
-<td style="height: 53px;"><a href="/d2l/le/content/130812/viewContent/2631103/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i>Making a room booking<br /></a></td>
-<td style="height: 53px;">Self-directed</td>
-<td style="height: 53px;">5 minutes</td>
-</tr>
-<tr style="height: 53px;">
-<td style="height: 53px;"><a href="/d2l/le/content/130812/viewContent/2631396/View" target="_parent"><i class="fas fa-info-circle fa-fw fa-2x" aria-hidden="true"></i>Windows 10 tips<br /></a></td>
-<td style="height: 53px;">Self-directed</td>
-<td style="height: 53px;">5 minutes</td>
-</tr>
-<tr style="height: 53px;">
-<td style="height: 53px;"><a href="/d2l/le/content/130812/viewContent/2631405/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i>Introducing MyNTU<br /></a></td>
-<td style="height: 53px;">Self-directed</td>
-<td style="height: 53px;">5 minutes</td>
-</tr>
-<tr style="height: 53px;">
-<td style="height: 53px;"><a href="/d2l/le/content/130812/viewContent/2836699/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i>Understanding Information Security<br /></a></td>
-<td style="height: 53px;">Self-directed</td>
-<td style="height: 53px;">30-40 minutes</td>
-</tr>
-<tr style="height: 53px;">
-<td style="height: 53px;"><i class="far fa-comments fa-fw fa-2x" aria-hidden="true"></i> First Month review</td>
-<td style="height: 53px;">Meeting organised by your line manager</td>
-<td style="height: 53px;">30 minutes</td>
-</tr>
-</tbody>
-</table>
 <p><a href="https://www.lynda.com/Business-Software-tutorials/Make-most-meetings/440668/489456-4.html" target="_blank" rel="noopener noreferrer"><i class="fas fa-play-circle fa-fw"></i>Watch this short video on Lynda.com (requires your NTU login) to help you make the most of your review discussions</a></p>
 <div class="row">
 <div class="col-12 col-sm-4"><a class="btn btn-lg btn-block btn-light" role="button" href="/d2l/le/content/130812/viewContent/2549398/View" target="_parent" title="Go to previous activity"><span class="fa-stack fa-2x"><i class="fas fa-circle fa-stack-2x" style="color: #ed1266;"></i><i class="fas fa-arrow-left fa-stack-1x fa-inverse"></i></span> Previous </a></div>
