--- a/First_week_index.html
+++ b/First_week_index.html
@@ -14,7 +14,7 @@
 <div class="btn-group float-right" role="group" aria-label="Activity navigation"><a role="button" href="/d2l/le/content/130812/viewContent/2549398/View" target="_parent" title="Go to previous activity"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-arrow-left fa-stack-1x"></i></span></a> <a role="button" href="/d2l/le/content/130812/viewContent/2561872/View" target="_blank" title="Go to activity checklist" rel="noopener noreferrer"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-check fa-stack-1x"></i></span></a> <a role="button" href="/d2l/le/content/130812/viewContent/2558866/View" target="_parent" title="Go to next activity"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-arrow-right fa-stack-1x"></i></span></a></div>
 <h2>Overview</h2>
 <p class="lead">In your first week, you may be shown or spoken to about a number of digital tools and systems used at NTU. The following activities will introduce you to some of these tools and systems. To participate in an activity, select a title from the checklist below.</p>
-<div id="myBtnContainer"><button class="btn active" onclick="filterSelection('all')"> See all</button> <button class="btn active" onclick="filterSelection('core')" aria-pressed="true"> Core</button> <button class="btn" onclick="filterSelection('lta')"> Learning and teaching</button> <button class="btn" onclick="filterSelection('research')"> Research</button> <button class="btn d-none" onclick="filterSelection('leadership')" disabled="disabled" role="button" aria-disabled="true" tabindex="-1"> Leadership and management</button> <button class="btn d-none" onclick="filterSelection('profserv')" disabled="disabled" role="button" aria-disabled="true" tabindex="-1"> Professional Services</button> </div>
+<div id="myBtnContainer"><button class="btn btn-secondary active" onclick="filterSelection('all')"> See all</button> <button class="btn btn-secondary" onclick="filterSelection('core')" aria-pressed="true"> Core</button> <button class="btn btn-secondary" onclick="filterSelection('lta')"> Learning and teaching</button> <button class="btn btn-secondary" onclick="filterSelection('research')"> Research</button> <button class="btn btn-secondary d-none" onclick="filterSelection('leadership')" disabled="disabled" role="button" aria-disabled="true" tabindex="-1"> Leadership and management</button> <button class="btn btn-secondary d-none" onclick="filterSelection('profserv')" disabled="disabled" role="button" aria-disabled="true" tabindex="-1"> Professional Services</button> </div>
 
 <div class="container">
 <div class="row filterDiv core lta research leadership profserv">
@@ -29,24 +29,44 @@
 </div>
 </div>
 <div class="row filterDiv core">
-<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2549488/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Setting up your email signature</a></div>
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2558866/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Understanding NTU Systems</a></div>
 <div class="col">Self-directed</div>
 <div class="col">5 minutes</div>
 </div>
 <div class="row filterDiv core">
-<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2554044/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Finding people/setting up a contact list</a></div>
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2558867/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Exploring Office 365 and OneDrive</a></div>
 <div class="col">Self-directed</div>
 <div class="col">5 minutes</div>
 </div>
 <div class="row filterDiv core">
-<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2554182/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Connecting to a printer</a></div>
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2558869/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Finding NTU document templates</a></div>
 <div class="col">Self-directed</div>
 <div class="col">5 minutes</div>
 </div>
   <div class="row filterDiv core">
-<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2554088/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Using IT support</a></div>
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2558870/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Sharing your calendar</a></div>
 <div class="col">Self-directed</div>
 <div class="col">5 minutes</div>
+</div>
+  <div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2558871/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Accessing Skype and setting up voicemail</a></div>
+<div class="col">Self-directed</div>
+<div class="col">5 minutes</div>
+</div>
+<div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2558872/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Good practice with IT - passwords</a></div>
+<div class="col">Self-directed</div>
+<div class="col">5 minutes</div>
+</div>
+<div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2567654/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Good practice with IT - storing files</a></div>
+<div class="col">Self-directed</div>
+<div class="col">5 minutes</div>
+</div>
+  <div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2606728/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Understanding the General Data Protection Regulation (GDPR)</a></div>
+<div class="col">Essential learning for All NTU Staff</div>
+<div class="col">30-40 minutes</div>
 </div>
   <div class="row filterDiv lta">
 <div class="col-6"><a href=""><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Learning and teaching roles induction coming soon</a></div>
@@ -58,12 +78,12 @@
 <div class="col">TBC</div>
 <div class="col">TBC</div>
 </div>
-  <div class="row filterDiv leadership">
+  <div class="row filterDiv leadership d-none">
 <div class="col-6"><a href="" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Leadership roles induction coming soon</a></div>
 <div class="col">TBC</div>
 <div class="col">TBC</div>
 </div>
-  <div class="row filterDiv profserv">
+  <div class="row filterDiv profserv d-none">
 <div class="col-6"><a href="" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Professional services roles induction coming soon</a></div>
 <div class="col">TBC</div>
 <div class="col">TBC</div>
@@ -74,62 +94,7 @@
 <div class="col">30 minutes</div>
 </div>
 </div>
-  <table class="table table-hover">
-<thead class="thead-light">
-<tr>
-<th scope="col">Activity</th>
-<th scope="col">Method</th>
-<th scope="col">Duration</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2558866/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Understanding NTU Systems</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2558867/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Exploring Office 365 and OneDrive</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2558869/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Finding NTU document templates</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2558870/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i>&nbsp;Sharing your calendar</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2558871/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Accessing Skype and setting up voicemail</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2558872/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Good practice with IT - passwords</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2567654/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Good practice with IT - storing files</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2606728/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Understanding the General Data Protection Regulation&nbsp;(GDPR)</a></td>
-<td>Essential learning for All NTU Staff</td>
-<td>30-40 minutes</td>
-</tr>
-<tr>
-<td><i class="far fa-comments fa-fw fa-2x" aria-hidden="true"></i> First Week review</td>
-<td>Meeting organised by your line manager</td>
-<td>30 minutes</td>
-</tr>
-</tbody>
-</table>
+
 <p><a href="https://www.lynda.com/Business-Software-tutorials/Make-most-meetings/440668/489456-4.html" target="_blank" rel="noopener noreferrer"><i class="fas fa-play-circle fa-fw"></i>Watch this short video on Lynda.com (requires your NTU login) to help you make the most of your review discussions</a></p>
 <div class="row">
 <div class="col-12 col-sm-4"><a class="btn btn-lg btn-block btn-light" role="button" href="/d2l/le/content/130812/viewContent/2549398/View" target="_parent" title="Go to previous activity"><span class="fa-stack fa-2x"><i class="fas fa-circle fa-stack-2x" style="color: #ed1266;"></i><i class="fas fa-arrow-left fa-stack-1x fa-inverse"></i></span> Previous </a></div>
