--- a/First_month_index.html
+++ b/First_month_index.html
@@ -66,7 +66,7 @@
 </div>
   
     <div class="row filterDiv core">
-<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2631396/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Windows 10 tips</a></div>
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2631396/View" target="_parent"><i class="fas fa-info-circle fa-fw fa-2x" aria-hidden="true"></i> Windows 10 tips</a></div>
 <div class="col">Self-directed</div>
 <div class="col">5 minutes</div>
 </div>
