Move data from table to divs for filters
Changed Lynda.com link
Changed look of filter buttons

--- a/Three_months_index.html
+++ b/Three_months_index.html
@@ -15,7 +15,7 @@
 <div class="btn-group float-right" role="group" aria-label="Activity navigation"><a role="button" href="#" target="_blank" title="Go to previous activity" rel="noopener noreferrer"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-arrow-left fa-stack-1x"></i></span></a> <a role="button" href="/d2l/le/content/130812/viewContent/2860312/View" target="_blank" title="Go to activity checklist" rel="noopener noreferrer"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-check fa-stack-1x"></i></span></a> <a role="button" href="#" target="_parent" title="Go to next activity"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-arrow-right fa-stack-1x"></i></span></a></div>
 <h2>Overview</h2>
 <p class="lead">Within your first three months, you will have used a number of NTU's systems and software to complete tasks or help solve problems.&nbsp; The following activities will introduce you to some broader topics that will help you develop your wider digital practices.&nbsp; To participate in an activity, select a title from the list below.</p>
-<div id="myBtnContainer"><button class="btn active" onclick="filterSelection('all')"> See all</button> <button class="btn active" onclick="filterSelection('core')" aria-pressed="true"> Core</button> <button class="btn" onclick="filterSelection('lta')"> Learning and teaching</button> <button class="btn" onclick="filterSelection('research')"> Research</button> <button class="btn d-none" onclick="filterSelection('leadership')" disabled="disabled" role="button" aria-disabled="true" tabindex="-1"> Leadership and management</button> <button class="btn d-none" onclick="filterSelection('profserv')" disabled="disabled" role="button" aria-disabled="true" tabindex="-1"> Professional Services</button> </div>
+<div id="myBtnContainer"><button class="btn btn-secondary active" onclick="filterSelection('all')"> See all</button> <button class="btn btn-secondary" onclick="filterSelection('core')" aria-pressed="true"> Core</button> <button class="btn btn-secondary" onclick="filterSelection('lta')"> Learning and teaching</button> <button class="btn btn-secondary" onclick="filterSelection('research')"> Research</button> <button class="btn btn-secondary d-none" onclick="filterSelection('leadership')" disabled="disabled" role="button" aria-disabled="true" tabindex="-1"> Leadership and management</button> <button class="btn btn-secondary d-none" onclick="filterSelection('profserv')" disabled="disabled" role="button" aria-disabled="true" tabindex="-1"> Professional Services</button> </div>
 
 <div class="container">
 <div class="row filterDiv core lta research leadership profserv">
@@ -30,24 +30,39 @@
 </div>
 </div>
 <div class="row filterDiv core">
-<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2549488/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Setting up your email signature</a></div>
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2860293/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Working flexibly</a></div>
 <div class="col">Self-directed</div>
 <div class="col">5 minutes</div>
 </div>
 <div class="row filterDiv core">
-<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2554044/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Finding people/setting up a contact list</a></div>
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2860392/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Using LinkedIn Learning</a></div>
 <div class="col">Self-directed</div>
 <div class="col">5 minutes</div>
 </div>
 <div class="row filterDiv core">
-<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2554182/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Connecting to a printer</a></div>
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2860422/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Managing Your Outlook Inbox</a></div>
 <div class="col">Self-directed</div>
 <div class="col">5 minutes</div>
 </div>
   <div class="row filterDiv core">
-<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2554088/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Using IT support</a></div>
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2860401/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Copyright/Creative Commons</a></div>
 <div class="col">Self-directed</div>
 <div class="col">5 minutes</div>
+</div>
+  <div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2860407/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Accessibility Awareness</a></div>
+<div class="col">Self-directed</div>
+<div class="col">5 minutes</div>
+</div>
+<div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2860416/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Tools to extend your development</a></div>
+<div class="col">Self-directed</div>
+<div class="col">5 minutes</div>
+</div>
+  <div class="row filterDiv core">
+<div class="col-6"><a href="/d2l/le/content/130812/viewContent/2883008/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Appraisee online training</a></div>
+<div class="col">Essential Learning for all NTU staff</div>
+<div class="col">30-40 minutes</div>
 </div>
   <div class="row filterDiv lta">
 <div class="col-6"><a href=""><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Learning and teaching roles induction coming soon</a></div>
@@ -59,12 +74,12 @@
 <div class="col">TBC</div>
 <div class="col">TBC</div>
 </div>
-  <div class="row filterDiv leadership">
+  <div class="row filterDiv leadership d-none">
 <div class="col-6"><a href="" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Leadership roles induction coming soon</a></div>
 <div class="col">TBC</div>
 <div class="col">TBC</div>
 </div>
-  <div class="row filterDiv profserv">
+  <div class="row filterDiv profserv d-none">
 <div class="col-6"><a href="" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Professional services roles induction coming soon</a></div>
 <div class="col">TBC</div>
 <div class="col">TBC</div>
@@ -75,58 +90,7 @@
 <div class="col">30 minutes</div>
 </div>
 </div>
-  <table class="table table-hover">
-<thead class="thead-light">
-<tr>
-<th scope="col">Activity</th>
-<th scope="col">Method</th>
-<th scope="col">Duration</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2860293/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Working flexibly</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2860392/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Using Lynda.com</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2860422/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Managing Your Outlook Inbox</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2860401/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Copyright/Creative Commons</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2860407/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Accessibility Awareness</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2860416/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Tools to extend your development</a></td>
-<td>Self-directed</td>
-<td>5 minutes</td>
-</tr>
-<tr>
-<td><a href="/d2l/le/content/130812/viewContent/2883008/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Appraisee online training</a></td>
-<td>Self-directed</td>
-<td>30-40 minutes</td>
-</tr>
-<tr>
-<td><i class="far fa-comments fa-fw fa-2x" aria-hidden="true"></i> Third month review</td>
-<td>Meeting organised by your line manager</td>
-<td>30 minutes</td>
-</tr>
-</tbody>
-</table>
-<p><a href="https://www.lynda.com/Business-Software-tutorials/Make-most-meetings/440668/489456-4.html" target="_blank" rel="noopener noreferrer"><i class="fas fa-play-circle fa-fw"></i>Watch this short video on Lynda.com (requires your NTU login) to help you make the most of your review discussions</a></p>
+<p><a href="https://www.linkedin.com/learning/time-management-tips-weekly/make-the-most-of-meetings?u=36922300" target="_blank" rel="noopener noreferrer"><i class="fas fa-play-circle fa-fw"></i>Watch this short video on LinkedIn Learning (requires your NTU login) to help you make the most of your review discussions</a></p>
 <div class="row">
 <div class="col-12 col-sm-4"><a class="btn btn-lg btn-block btn-light" role="button" href="#" target="_parent" title="Go to previous activity"><span class="fa-stack fa-2x"><i class="fas fa-circle fa-stack-2x" style="color: #ed1266;"></i><i class="fas fa-arrow-left fa-stack-1x fa-inverse"></i></span> Previous </a></div>
 <div class="col-12 col-sm-4"><a class="btn btn-lg btn-block btn-light" role="button" href="/d2l/le/content/130812/viewContent/2860312/View" target="_blank" title="Go to activity checklist" rel="noopener noreferrer"><span class="fa-stack fa-2x"><i class="fas fa-circle fa-stack-2x" style="color: #ed1266;"></i><i class="fas fa-check fa-stack-1x fa-inverse"></i></span> Sign off</a></div>
