Fix understanding information security duration

--- a/First_month_index.html
+++ b/First_month_index.html
@@ -79,7 +79,7 @@
      <div class="row filterDiv core">
 <div class="col-6"><a href="/d2l/le/content/130812/viewContent/2836699/View" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Understanding Information Security</a></div>
 <div class="col">Self-directed</div>
-<div class="col">5 minutes</div>
+<div class="col">30-40 minutes</div>
 </div>
 
   
