Hiding leadership and PS coming soon with .d-none

--- a/First_day_index.html
+++ b/First_day_index.html
@@ -59,12 +59,12 @@
 <div class="col">TBC</div>
 <div class="col">TBC</div>
 </div>
-  <div class="row filterDiv leadership">
+  <div class="row filterDiv leadership d-none">
 <div class="col-6"><a href="" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Leadership roles induction coming soon</a></div>
 <div class="col">TBC</div>
 <div class="col">TBC</div>
 </div>
-  <div class="row filterDiv profserv">
+  <div class="row filterDiv profserv d-none">
 <div class="col-6"><a href="" target="_parent"><i class="fas fa-hand-point-up fa-fw fa-2x" aria-hidden="true"></i> Professional services roles induction coming soon</a></div>
 <div class="col">TBC</div>
 <div class="col">TBC</div>
