--- a/activity template.html
+++ b/activity template.html
@@ -5,7 +5,7 @@
 <title>Bootstrap template page</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-<link rel="stylesheet" href="https://rawgit.com/ntudigital/NOW/master/digital_induction.css" crossorigin="anonymous">
+<link rel="stylesheet" href="https://rawgit.com/ntudigital/NOW/digital_induction.css" crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
@@ -25,11 +25,11 @@
 <div class="col-md-12">
 <h3><i class="fas fa-hand-point-up fa-fw" aria-hidden="true"></i>Activity and instructions</h3>
 [Add content in here]</div>
-<!--<div class="col-md-4">
+<!--Start of info box--><div class="col-md-4">
 <div class="card" style="width: 100%; margin: 5px;">
 <div class="card-body">Card for extra info</div>
 </div>
-</div>--></div>
+</div><!--End of info box--></div>
 </div>
 </div>
 <div class="d-flex justify-content-between" style="background-color: #000;">
