--- a/activity template.html
+++ b/activity template.html
@@ -11,7 +11,7 @@
 <div class="container">
 <h1>Title</h1>
 <div id="body">
-<div class="btn-group float-right" role="group" aria-label="Activity navigation"><a role="button" href="/d2l/le/content/130812/viewContent/2549398/View" target="_blank" title="Go to previous activity" rel="noopener noreferrer"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-arrow-left fa-stack-1x"></i></span></a> <a role="button" href="/d2l/le/content/130812/viewContent/2558846/View" target="_blank" title="Go back to list of activities" rel="noopener noreferrer"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-list-ul fa-stack-1x"></i></span></a><a role="button" href="https://now.ntu.ac.uk/d2l/le/content/130812/viewContent/3005489/View" target="_blank" title="Induction help" rel="noopener noreferrer"><span class="fa-stack"> <i class="fas fa-circle fa-stack-2x"></i><i class="fas fa-question fa-stack-1x"></i></span></a> <a role="button" href="/d2l/le/content/130812/viewContent/2549398/View" target="_parent" title="Go to next activity"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-arrow-right fa-stack-1x"></i></span></a></div>
+<div class="btn-group float-right" role="group" aria-label="Activity navigation"><a role="button" href="/d2l/le/content/130812/viewContent/2549398/View" target="_blank" title="Go to previous activity" rel="noopener noreferrer"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-arrow-left fa-stack-1x"></i></span></a> <a role="button" href="/d2l/le/content/130812/viewContent/2558846/View" target="_blank" title="Go back to list of activities" rel="noopener noreferrer"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-list-ul fa-stack-1x"></i></span></a><a role="button" href="/d2l/le/content/130812/viewContent/3005489/View" target="_blank" title="Induction help" rel="noopener noreferrer"><span class="fa-stack"> <i class="fas fa-circle fa-stack-2x"></i><i class="fas fa-question fa-stack-1x"></i></span></a> <a role="button" href="/d2l/le/content/130812/viewContent/2549398/View" target="_parent" title="Go to next activity"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-arrow-right fa-stack-1x"></i></span></a></div>
 <h2>Overview</h2>
 <p class="lead">This is an intro sentence</p>
 <h3>Learning Outcomes</h3>
@@ -20,21 +20,16 @@
 <li>second</li>
 <li>third</li>
 </ol>
+<h3><i class="fas fa-hand-point-up fa-fw" aria-hidden="true"></i>Activity and instructions</h3>
 <div class="grey-panel">
 <div class="row">
-<div class="col-md-12">
-<h3><i class="fas fa-hand-point-up fa-fw" aria-hidden="true"></i>Activity and instructions</h3>
-[Add content in here]</div>
-<!--Start of info box--><div class="col-md-4">
-<div class="card" style="width: 100%; margin: 5px;">
-<div class="card-body">Card for extra info</div>
-</div>
-</div><!--End of info box--></div>
+<div class="col-md-12">[Add content in here]</div>
 </div>
 </div>
-<div class="d-flex justify-content-between" style="background-color: #000;">
+</div>
+<div class="d-flex justify-content-between footer-icon-bar">
 <div class="btn-group float-left" role="group" aria-label="Activity navigation"><a role="button" href="/d2l/le/content/130812/viewContent/2549398/View" target="_parent" title="Go to the Digital Induction homepage"><span class="fa-stack"><i class="fas fa-circle fa-stack-2x"></i><i class="fas fa-home fa-stack-1x" data-fa-transform="down-6"></i></span></a><a role="button" href="/d2l/le/content/130812/viewContent/2558846/View" target="_parent" title="Go to the First Week Overview"><span class="fa-stack"> <i class="fas fa-circle fa-stack-2x"></i><i class="far fa-calendar-alt fa-stack-1x"></i></span></a><a role="button" href="https://ntusurvey.onlinesurveys.ac.uk/digital-induction-pilot-feedback" target="_new" title="Go to our feedback form"><span class="fa-stack"> <i class="fas fa-circle fa-stack-2x"></i><i class="far fa-comment fa-stack-1x"></i></span></a></div>
-<div class="btn-group float-right" role="group" aria-label="Activity navigation"><a role="button" href="/d2l/le/content/130812/viewContent/2549398/View" target="_blank" title="Go to previous activity" rel="noopener noreferrer"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-arrow-left fa-stack-1x"></i></span></a> <a role="button" href="/d2l/le/content/130812/viewContent/2558846/View" target="_blank" title="Go back to list of activities" rel="noopener noreferrer"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-list-ul fa-stack-1x"></i></span></a><a role="button" href="https://now.ntu.ac.uk/d2l/le/content/130812/viewContent/3005489/View" target="_blank" title="Induction help" rel="noopener noreferrer"><span class="fa-stack"> <i class="fas fa-circle fa-stack-2x"></i><i class="fas fa-question fa-stack-1x"></i></span></a> <a role="button" href="/d2l/le/content/130812/viewContent/2549398/View" target="_parent" title="Go to next activity"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-arrow-right fa-stack-1x"></i></span></a></div>
+<div class="btn-group float-right" role="group" aria-label="Activity navigation"><a role="button" href="/d2l/le/content/130812/viewContent/2549398/View" target="_blank" title="Go to previous activity" rel="noopener noreferrer"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-arrow-left fa-stack-1x"></i></span></a> <a role="button" href="/d2l/le/content/130812/viewContent/2558846/View" target="_blank" title="Go back to list of activities" rel="noopener noreferrer"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-list-ul fa-stack-1x"></i></span></a><a role="button" href="/d2l/le/content/130812/viewContent/3005489/View" target="_blank" title="Induction help" rel="noopener noreferrer"><span class="fa-stack"> <i class="fas fa-circle fa-stack-2x"></i><i class="fas fa-question fa-stack-1x"></i></span></a> <a role="button" href="/d2l/le/content/130812/viewContent/2549398/View" target="_parent" title="Go to next activity"><span class="fa-stack fa-x"> <i class="fas fa-circle fa-stack-2x"></i> <i class="fas fa-arrow-right fa-stack-1x"></i></span></a></div>
 </div>
 <p><small>&copy; Nottingham Trent University</small></p>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
