--- a/activity template.html
+++ b/activity template.html
@@ -5,7 +5,7 @@
 <title>Bootstrap template page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/0b13beafab.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/ntudigital/accessibility/NOW_style.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/ntudigital/accessibility@master/NOW_style.min.css" crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
